fix: correct preload path in package.json

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
                   "js": "./src/renderer/main.tsx",
                   "name": "main_window",
                   "preload": {
-                    "js": "./src/preload.ts"
+                    "js": "./src/preload/index.ts"
                   }
                 }
               ]
